Tue Jan 13 16:50:03 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: use $0 as the default application class name.

Tue Jan 13 14:48:01 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): allow no "when" case. [ruby-dev:22578]

	* ruby.h (rb_class_of): reduce branch. [ruby-dev:22577]

	* ruby.h (rb_type): ditto.

Tue Jan 13 14:26:59 2004  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/test/unit/ui/testrunnerutilities.rb (TestRunnerUtilities):
	  moved run method which allows output level.  [ruby-dev:22554]

Tue Jan 13 13:04:24 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/test_*.rb: Pathname#parent -> Pathname#dirname.

Tue Jan 13 11:38:58 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/yaml/test_yaml.rb (YAML_Unit_Tests::test_spec_type_{int,float}):
	  fix syntax error.

Tue Jan 13 07:52:40 2004  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/bytecode.c: turn off default implicit typing.

	* ext/syck/implicit.c: detect base60 integers.

	* ext/syck/rubyext.c: handle base60, as well as hex and octal
	  with commas.  implicit typing of ruby symbols.

	* test/yaml/test_yaml.rb: add test.

Tue Jan 13 04:29:52 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_driver.rb (RiDriver::report_method_stuff):
	  Show fully-qualified class names in class list.

Tue Jan 13 01:24:17 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (test_wr): Rdoc fix.  [ruby-core:02225]

Tue Jan 13 01:04:37 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_paths.rb (RI::Paths): First attempt at
	  incorporating DESTDIR in the rdoc installation.

Mon Jan 12 23:26:21 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): fix position after FCALL.  [ruby-dev:22574]

Mon Jan 12 18:00:11 2004  Ian Macdonald  <ian@caliban.org>

	* file.c (test_wr, test_ww): New functions implementing new
	  methods (File::world_readable?, File::world_writable?).

	* file.c (S_IRUGO, S_IGUGO): New macros.
